catalog.html,form.html

--- a/source/index.html
+++ b/source/index.html
@@ -93,38 +93,39 @@
           <img src="img/mobile-map.jpg" class="contacts__map" width="" height="" alt="Мы на карте">
         </div>
       </section>
-      <section class="page-footer">
-        <a class="page-footer__logo">
-          <img src="img/logotype-mobile.svg" class="page-footer__logo-image" width="" height="" alt="Кэт энержи">
-        </a>
-        <div class="page-footer__social social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a href="https://vk.com/htmlacademy" class="social__link social__link--vkontakte">Мы в Вконтакте
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="https://www.instagram.com/htmlacademy" class="social__link social__link--instagram">Мы в Инстаграме
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="https://www.facebook.com/htmlacademy" class="social__link social__link--facebook">
-              Мы в Фейсбуке</a>
-            </li>
-          </ul>
-        </div>
-        <div class="page-footer__copyright copyright">
-          <ul class="copyright__list">
-            <li class="copyright__item">HTML Academy
-            </li>
-            <li class="copyright__item">
-              <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">
-                <img src="img/mobile-img-html-academy.svg" width="320" height="400" alt="HTML Academy">
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
+    </main>
+    <footer class="page-footer">
+      <a class="page-footer__logo">
+        <img src="img/logotype-mobile.svg" class="page-footer__logo-image" width="" height="" alt="Кэт энержи">
+      </a>
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a href="https://vk.com/htmlacademy" class="social__link social__link--vkontakte">Мы в Вконтакте
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="https://www.instagram.com/htmlacademy" class="social__link social__link--instagram">Мы в Инстаграме
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="https://www.facebook.com/htmlacademy" class="social__link social__link--facebook">
+            Мы в Фейсбуке</a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <ul class="copyright__list">
+          <li class="copyright__item">HTML Academy
+          </li>
+          <li class="copyright__item">
+            <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">
+              <img src="img/mobile-img-html-academy.svg" width="320" height="400" alt="HTML Academy">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     </main>
   </body>
 </html>
