--- a/source/form.html
+++ b/source/form.html
@@ -85,7 +85,7 @@
     </section>
     </main>
     <footer class="page-footer">
-    <a class="page-footer__logo">
+    <a href="index.html" class="page-footer__logo">
       <img src="img/logotype-mobile.svg" class="page-footer__logo-image" width="" height="" alt="Кэт энержи">
     </a>
     <div class="page-footer__social social">
