--- a/source/index.html
+++ b/source/index.html
@@ -13,9 +13,9 @@
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-naw__wrapper">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active"><a>Главная</a></li>
-            <li class="site-list__item"><a href="#">Каталог продукции</a></li>
-            <li class="site-list__item"><a href="#">Подбор программы</a></li>
+            <li class="site-list__item site-list__item--current"><a href="index.html">Главная</a></li>
+            <li class="site-list__item"><a href="catalog.html">Каталог продукции</a></li>
+            <li class="site-list__item"><a href="form.html">Подбор программы</a></li>
           </ul>
         </div>
       </nav>
